# slap-faast

./: .gitignore  control_kinect.py  debug_output.txt  debug_output_2.txt  demo_kinect.py  dll_exports.txt  fix_path_quotes.ps1  inspect_dll.py  kinect_dashboard.html  kinect_desktop_app.py  kinect_ninja_init.py  kinect_server.py  kinect_test_gui.py  requirements.txt  run_backend.bat  run_bone_detector.py  run_frontend.bat  scan_all_cameras.py  scan_usb_devices.py  simple_iso_test.py  start_system.bat  test_buffer_direct.py  test_camera_depth_isolated.py  test_camera_direct.py  test_camera_isolated.py  test_distance_detector.py  test_dual_view.py  test_import.py  test_kinect_depth.py  test_kinect_real.py  test_kinect_video.py  test_libfreenect_correct.py  test_motor_direct.py  test_mp.py  test_mp_dir.py  test_mp_fix.py  test_voice.py
documentacion/: 16-22-40-Control_Kinect_con_gestos.md  17-9-33-Plantilla_para_desarrollo_r_pido.md  Pasted_content.txt  README (1).txt  README (10).txt  README (11).txt  README (12).txt  README (13).txt  README (14).txt  README (15).txt  README (16).txt  README (2).md  README (2).txt  README (4).txt  README (5).txt  README (6).txt  README (7).txt  README (8).txt  README (9).txt  README.md  README.txt  analisis_tecnologias_desarrollo (3).md  arquitectura_software (1).md  codex_tasks.txt  diseno_interfaz_usuario (3).md  documentacion_tecnica_slapfaast (2).md  funcionalidades_slapfaast (3).md  gestor de proyectos.txt  gestordeproyectos.txt  investigacion_tecnica_kinect_v1 (2).md  todo (2).md  (+7 more)
kinect_wrapper/: CMakeLists.txt  kinect_wrapper.cpp
(+121 files in other folders)
